<resources>
    <string name="app_name">AndroidFundamentals</string>
    <string name="very_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non risus eget enim imperdiet efficitur sit amet ac tellus. Nulla luctus sed ligula sit amet rutrum.

        Cras rhoncus tempor justo vitae cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lobortis, sapien vel scelerisque vestibulum, lacus elit ornare metus, nec malesuada lacus arcu ut purus.

        Vestibulum vestibulum libero eu lectus ultricies interdum. Pellentesque eget massa sit amet ipsum sagittis iaculis. Donec ac nibh non metus ultrices dignissim vel et neque.

        Nunc sed ipsum sem. Morbi augue nulla, auctor nec odio et, commodo sodales ipsum. Quisque erat risus, efficitur scelerisque elementum porta, convallis vel lacus. Praesent vel commodo lorem.

        Vestibulum in egestas diam, in condimentum justo.  Nunc semper, mi eu viverra imperdiet, nulla dolor scelerisque erat, ut mattis leo neque nec risus. Phasellus dictum, justo tempor laoreet sodales,

        lacus sem aliquam purus, vitae luctus eros nulla id odio. Duis sit amet accumsan tellus. Quisque facilisis consequat nulla in faucibus. Aliquam sit amet ipsum sapien. Nunc non felis dignissim,

        hendrerit justo vestibulum, scelerisque nibh. Mauris sed libero eros. Phasellus in nisl ut tellus pretium rutrum. Curabitur ac sollicitudin neque. Duis ante arcu, pharetra vel risus ac, malesuada molestie ex.

        In in libero convallis, scelerisque nunc ac, pharetra libero. Donec suscipit arcu velit, a malesuada urna malesuada at.  Nam orci neque, semper vitae justo et, finibus interdum diam. Aenean a nibh nunc.

        Vestibulum justo nisi, mattis in vehicula quis, feugiat ac nunc. Aenean sed lacus velit. Fusce sagittis risus vitae magna tempus maximus. Ut id feugiat lacus. Fusce diam velit, placerat a rutrum quis,

        imperdiet et nibh. Integer sed aliquet massa, a luctus leo.</string>
    <string name="header_image_string">Header Image</string>
    <string name="happy_holidays_string">Happy Holidays</string>
    <string name="from_paul_string">From Paul</string>
    <string name="img_star">Star</string>
    <string name="merryChristmas_string">Have yourself a merry little Christmas,\nLet your heart be light\nFrom now on, our troubles will be out of sight</string>
    <string name="img_poster">Poster</string>
    <string name="open_secondActivity_string">Open second activity</string>
    <string name="second_activity_string">We are on the second activity</string>
    <string name="first_passage">This is the first passage</string>
    <string name="second_passage">This is the second passage</string>
    <string name="third_passage">This is the third passage</string>
    <string name="first_button_string">First Button</string>
    <string name="second_button_string">Second Button</string>
    <string name="third_button_string">Third Button</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="reply_received">REPLY RECEIVED</string>
    <string name="send">SEND</string>
    <string name="message_received">MESSAGE RECEIVED</string>
    <string name="open_website">Open website</string>
    <string name="hello_fragment">Hello Fragment</string>
    <string name="show_in_activity">show in activity</string>
    <string name="fragment_toast">fragment toast</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_about_us">About us</string>
    <string name="menu_title_contact">Contact</string>
    <string name="menu_group_title_communication">Communication</string>
    <string name="menu_title_share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About us</string>
    <string name="contact">Contact</string>
    <string name="home">Home</string>
</resources>