<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_title_home" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_title_about_us" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_call_24"
            android:title="@string/menu_title_contact" />
    </group>

    <item android:title="@string/menu_group_title_communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/menu_title_share" />
        </menu>
    </item>
</menu>