<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/first_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_button_string" />

    <Button
        android:id="@+id/second_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_button_string" />

    <Button
        android:id="@+id/third_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_button_string" />

</LinearLayout>