<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".week4.ConstraintActivity">

    <ImageView
        android:id="@+id/img_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/header_image_string"
        android:scaleType="centerCrop"
        android:src="@drawable/header_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_happyHolidays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/happy_holidays_string"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/img_star"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toBottomOf="@id/img_header"/>

    <TextView
        android:id="@+id/txt_fromPaul"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/from_paul_string"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/txt_happyHolidays"
        app:layout_constraintStart_toStartOf="@id/txt_happyHolidays"
        app:layout_constraintTop_toBottomOf="@id/txt_happyHolidays"/>

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:src="@drawable/poster_sparkling"
        app:layout_constraintBottom_toBottomOf="@id/txt_fromPaul"
        app:layout_constraintStart_toStartOf="@id/txt_merryChristmas"
        android:contentDescription="@string/img_poster"/>

    <ImageView
        android:id="@+id/img_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:contentDescription="@string/img_star"
        android:src="@android:drawable/star_big_on"
        app:layout_constraintEnd_toEndOf="@id/txt_merryChristmas"
        app:layout_constraintTop_toBottomOf="@id/img_header"/>

    <TextView
        android:id="@+id/txt_merryChristmas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/merryChristmas_string"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_poster"/>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/txt_merryChristmas"
        app:layout_constraintTop_toBottomOf="@id/txt_merryChristmas"
        app:layout_constraintEnd_toEndOf="@id/txt_merryChristmas">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="Let it snow"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="Jingle Bells"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>